# modena

./: .dockerignore  .gitattributes  .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml  setup.py
.github/workflows/: tests.yml
src/modena/: __main__.py  helpers.py  run.py
src/nodclust/: __main__.py  concat.py  config.py  distsum.py  fast5.py  helpers.py  run.py
src/signals/: __main__.py  concat.py  distsum.py  fast5.py  helpers.py  run.py
tests/: out.bedgraph  out.csv  test_all.py
tests/inp/1/: a.fast5  b.fast5  c.fast5  d.fast5  e.fast5
tests/inp/2/: a.fast5  b.fast5  c.fast5  d.fast5  e.fast5  f.fast5  g.fast5
tests/inp/dna-1/: 00df993f-040c-4675-941a-a1417b5866f3.fast5  0851fe4c-fcc4-4479-8210-b43fcda28e06.fast5  0acd2b16-4ba7-43a1-b1b8-0fd2f6071e11.fast5  0d6b9f22-fec4-4fec-bc47-b37d47d695e3.fast5  16b98cfe-e04a-4872-b2b3-a97d73b1e09e.fast5  1cb60bf3-b283-4682-918d-68cbdc9849f5.fast5  1d155394-2404-4da2-be72-0ead04ba8dbb.fast5  1d641893-ffb0-4068-a936-cf0e6f723211.fast5  20f7d3a3-db9c-44c2-a92b-d15291e61a3c.fast5  23b874b7-eb59-4391-8b4d-20d32d1ef680.fast5  2610f682-0545-4eee-ae3a-2a3035687a76.fast5  277acbe9-a492-4da4-8266-acb0719e01c7.fast5  28d5ab22-b91e-4b1b-9dc0-de1d255f679b.fast5  295373af-e7bd-4ef3-a130-0b213f921c4e.fast5  2adb33dd-5d10-470e-b91c-9fec575dce62.fast5  2edd2d54-14fb-4861-9bd1-00d0e0409992.fast5  32c0851a-e513-40fe-8a17-049909016dec.fast5  368ab321-ad77-4e5d-a662-93a4905a26ee.fast5  36cbe902-6b4f-48c9-a842-48a5e5d1734c.fast5  3744e0cd-2638-4c19-8e9b-7c426f4b2ab2.fast5  3bd849dc-0bf5-483e-928e-182fc0d2d0a4.fast5  3be2fc23-850d-443b-a7ce-00e33185d887.fast5  3c1e6731-0144-4e70-a4a0-b59e9ceca38f.fast5  4087fabf-a5d7-41db-bf53-ff4fe50751f5.fast5  42b9cf3c-4ae4-4ebb-b0e4-408b23d57efb.fast5  476e68fb-ab2c-450b-baa7-fb76f5931b94.fast5  48b261d9-760f-4e79-bf10-414df84fefa5.fast5  4c82b1f6-0579-4002-a294-1f3c98653520.fast5  4f2d3588-9745-4604-9783-ff7aaac839ea.fast5  50008d02-e84c-4ff1-8767-7f2f7e5d76f3.fast5  523aef68-b813-4511-9b09-bc94b135c948.fast5  (+69 more)
tests/inp/dna/1/: a.fast5  (+4 more)
(+207 files in other folders)
