[tool.poetry]
name = "modena"
version = "2.0.0"
description = "Detect epigenetic and epitranscriptomic modifications."
authors = ["Siniša Biđin <sinisa@heuristika.hr>"]

[tool.poetry.dependencies]
python = ">=3.10"
astropy = "^5.3.4"
click = "^8.1.7"
kmeans1d = "^0.3.1"
pyslow5 = "^1.2.0"
cachetools = "^5.4.0"
scipy = "^1.14.0"
numpy = "^1.26.4"
loguru = "^0.7.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 100
exclude = [".git", ".ruff_cache"]
per-file-ignores = {}
target-version = "py310"
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

# Ruff linter rulesets to apply.
select = [
    "A",   # Shadowing builtins.
    "ARG", # Unused arguments.
    "ANN", # Missing annotations.
    "B",   # Possible bugs.
    "BLE", # Blind excepts.
    "C",
    "C4",  # Comprehensions.
    "C90", # Function complexity.
    "D",   # Docstrings.
    "DTZ", # Bad datetime use.
    "E",   # Pycodestyle generic.
    "EM",  # Nice error messages.
    "ERA", # Detect commented-out code.
    "F",   # Pyflakes generic.
    "I",   # Unsorted import blocks.
    "ICN", # Import name conventions.
    "N",   # Naming.
    "PD",  # Pandas antipatterns.
    "PLC", # Pylint.
    "PLE", # Pylint.
    "PLR", # Pylint.
    "PLW", # Pylint.
    "PGH",
    "Q",   # Consistent quotes.
    "RET", # No weird returns.
    "RUF", # Ruff-specific.
    "SIM", # Simplify code.
    "TID", # Tidy imports.
    "UP",  # Pyupgrade.
    "W",   # Pycodestyle generic.
    "YTT",
]

# Specific rules to ignore.
ignore = [
    "ANN101", # Type annotations for `self`.
    "B008", # Forbid `Depends(...)` in default values.
    "D203", # Blank line before class docstring.
    "D204", # Blank line after class docstring.
    "D213",
    "DTZ003",
    "EM101", # Binding exception literals to variables first.
    "PLR0913", # Too many arguments.
    "RET503",
    "RET504",
    "UP007",
]
